--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ supabase==2.0.0
 gunicorn==21.2.0
 whitenoise==6.6.0
 dj-database-url==2.1.0
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.1.0
 requests>=2.31.0
