--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ openpyxl>=3.1.0
 supabase==2.0.0
 gunicorn==21.2.0
 whitenoise==6.6.0
-dj-database-url==2.1.0
+dj-database-url>=2.1.0
 psycopg[binary]>=3.1.0
 requests>=2.31.0
