--- a/requirements-local.txt
+++ b/requirements-local.txt
@@ -5,5 +5,5 @@ crispy-tailwind==0.5.0
 python-decouple==3.8
 reportlab>=4.0.0
 openpyxl>=3.1.0
-supabase==2.0.0
+psycopg2-binary==2.9.9
 whitenoise==6.6.0
