--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ python-decouple==3.8
 reportlab>=4.0.0
 openpyxl>=3.1.0
 psycopg2-binary==2.9.9
-# Production dependencies removed for local development
+gunicorn==21.2.0
+whitenoise==6.6.0
 requests>=2.31.0
