--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Pillow>=10.0.0
 django-crispy-forms==2.1
 crispy-tailwind==0.5.0
 python-decouple==3.8
+python-dotenv==1.0.0
 reportlab>=4.0.0
 openpyxl>=3.1.0
 psycopg2-binary==2.9.9
