--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-decouple==3.8
 python-dotenv==1.0.0
 reportlab>=4.0.0
 openpyxl>=3.1.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.18
 gunicorn==21.2.0
 whitenoise==6.6.0
 requests>=2.31.0
