--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-crispy-forms==2.1
 crispy-tailwind==0.5.0
 python-decouple==3.8
 python-dotenv==1.0.0
+django-csp==3.7
 reportlab>=4.0.0
 openpyxl>=3.1.0
 psycopg[binary]==3.2.10
