--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.2.7
 psycopg2-binary==2.9.6
 python-decouple==3.8
+python-dotenv==1.0.0
 Pillow==9.5.0
 django-crispy-forms==2.0
 crispy-tailwind==0.5.0
